2009-01-09 Erwann Chenede - <erwann.chenede@sun.com>

	* usr/lib/time-slider-snapshot:
	* usr/share/time-slider/glade/time-slider-snapshot.glade:
	* usr/share/time-slider/lib/time_slider/snapnowui.py:
	  Initial implementation of the snapshot now dialog

2008-12-17 Niall Power - <niall.powr@sun.com>

	* lib/svc/method/time-slider: remove "set -x" command which errantly turns
	  on debug mode. Fixes bugzilla defect #5067
	* usr/share/time-slider/glade/time-slider-setup.glade: Change mnemonic key for
	  "Custom" radio button from "C" to "u". C is already in use by "Cancel" button.
	  Fixes bugzilla defect #3986
	* usr/share/time-slider/lib/time_slider/setupgui.py: Change error dialog text to
	  instruct user to consult "svcs -xv" instead of "svcs(1) man page" for more info
	  when time-slider SMF instance is placed into offline state by SMF.
	  Fixes bugzilla defect #5804

2008-12-17 Niall Power - <niall.power@sun.com>

	* usr/share/time-slider/lib/time_slider/cleanupmanager.py: Check
	  ps commmand output before accessing it by catching IndexError
	  exceptions. Prevents root's mailbox being spammed by cron.
	  Fixes bugster #6758575

2008-12-12 Niall Power - <niall.power@sun.com>

	* usr/share/time-slider/lib/time_slider/cleanupmanager.py: Implement
	  destruction of older snapshots since zfs-auto-snapshot only does
	  snapshot destruction recursively and we break the recursion by
	  deleting individual snapshots instead of recursive sets.

2008-12-05 Niall Power - <niall.power@sun.com>
	* usr/share/time-slider/lib/time_slider/setupgui.py
	  Fixed a patch generation problem when launching time-slider-delete

2008-12-05 Niall Power - <niall.power@sun.com>

	* VERSION: bumped to 0.2.1
	* Makefile: Minor cleanups
	* usr/share/time-slider/lib/time_slider/cleanupmanager.py: add
	  perform_purge method to clean up zero sized snapshots under 
	  safe circumstances so that the system doesn't become cluttered
	  with too many permanently zero sized snapshots.